force-app/main/default/objects/NCMT_Cost_Category__c/NCMT_Cost_Category__c.object-meta.xml
<CustomObject>
    <description>NCMT Cost Category</description>
    <label>Cost Category</label>
    <nameField>
        <label>Category ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>