force-app/main/default/objects/NCMT_Cost_Category__c/fields/CatDesc__c.field-meta.xml
<CustomField>
    <fullName>CatDesc__c</fullName>
    <formula>Name + &apos;-&apos; +  Category_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CatDesc</label>
    <type>Text</type>
</CustomField>