force-app/main/default/objects/NCMT_Cost_Category__c/fields/Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Category_Description__c</fullName>
    <description>Cost Category Description</description>
    <label>Category Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>