force-app/main/default/objects/NCMT_Cost_Category__c/fields/Cost_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category_Type__c</fullName>
    <label>Cost Category Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>