force-app/main/default/objects/NCMT_Cost_Category__c/fields/GSA_Express_Menu_Items__c.field-meta.xml
<CustomField>
    <fullName>GSA_Express_Menu_Items__c</fullName>
    <label>GSA Express Menu Items</label>
    <summaryFilterItems>
        <field>NCMT_Assembly_Lookup_Detail__c.File_Type__c</field>
        <operation>equals</operation>
        <value>GSAAssemblies</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_Assembly_Lookup_Detail__c.Level_2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>