force-app/main/default/objects/NCMT_Cost_Category__c/fields/Has_Lookups__c.field-meta.xml
<CustomField>
    <fullName>Has_Lookups__c</fullName>
    <label>Has Lookups</label>
    <summaryForeignKey>NCMT_DES_Lookup_details__c.Level_2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>