force-app/main/default/objects/NCMT_Cost_Category__c/fields/RSM_FCC_Items__c.field-meta.xml
<CustomField>
    <fullName>RSM_FCC_Items__c</fullName>
    <label>RSM FCC Items</label>
    <summaryFilterItems>
        <field>NCMT_DES_Lookup_details__c.File_Name__c</field>
        <operation>notEqual</operation>
        <value>GSA_ 2020 M&amp;R Unit Price Data.xls</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NCMT_DES_Lookup_details__c.File_Name__c</field>
        <operation>notEqual</operation>
        <value>GSA 2020 FMR_PM_ASSMUP.xlsx</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_DES_Lookup_details__c.Level_2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>