force-app/main/default/objects/NCMT_Cost_Category__c/fields/RSM_FMRD_Maintenence_and_Repair_Items__c.field-meta.xml
<CustomField>
    <fullName>RSM_FMRD_Maintenence_and_Repair_Items__c</fullName>
    <label>RSM FMRD Maintenence and Repair Items</label>
    <summaryFilterItems>
        <field>NCMT_Assembly_Lookup_Detail__c.File_Type__c</field>
        <operation>equals</operation>
        <value>GSA_ 2020 MR Assembly Data.xlsx</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_Assembly_Lookup_Detail__c.Level_2__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>