force-app/main/default/objects/NCMT_Cost_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category_Description__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Cost_Category_Type__c</columns>
    <columns>Estimate_Format__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>